--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     </div>
     
     <div class="project">
-      <div class="project-title">Modified A* Algorithm</div>
-      <div class="project-desc">Developed a hybrid of A* and RRT algorithms to improve path planning efficiency in static environments.</div>
-      <a href="https://github.com/ccavalluzzo/astar-rrt" target="_blank">Read Paper →</a>
+      <div class="project-title">TubeBot: the floodlight robot</div>
+      <div class="project-desc">A team project to design and develop a robot that scales buildings and produces a floodlight. My contribution was the mechaical design of the legs.</div>
+      <a href="https://github.com/ElliotWeiner/TubeBot" target="_blank">View Project →</a>
     </div>
     
   </div>
@@ -101,7 +101,7 @@
   <p>
     <a href="mailto:christinacavalluzzo@gmail.com">christinacavalluzzo@gmail.com</a><br>
     <a href="https://www.linkedin.com/in/christinacavalluzzo/">LinkedIn</a> |
-    <a href="https://github.com/ccavalluzzo">GitHub</a>
+    <a href="https://github.com/chrcava">GitHub</a>
   </p>
 </body>
 </html>
