--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
   <div class="projects">
 
     <div class="project">
-      <div class="project-title">BU Morphable Biorobotics Lab</div>
-      <div class="project-desc">Designed a bistable fluidic valve for an underwater swimming robot.</div>
+      <div class="project-title">BU Morphable Biorobotics Lab: Independent Study</div>
+      <div class="project-desc">Designed a bistable fluidic valve and other components for an underwater swimming robot.</div>
       <a href="https://github.com/chrcava/chrcava.github.io/blob/7cc1e6e2deaa3af714e2799cf6b3c8f517404bc6/Cavalluzzo%20indep%20study%20final.pdf" target="_blank">Read Paper →</a>
     </div>
 
     <div class="project">
       <div class="project-title">Enhancing Motion Planning Efficiency: A Hybrid Approach Combining A* and RRT Algorithms</div>
       <div class="project-desc">Python and MATLAB visualization of an A* algorithm combining RRT elements.</div>
-      <a href="https://github.com/chrcava/chrcava.github.io/blob/2d54a683ef5e24940e89b47bd41088a9ccb66315/RMP_final_chrcava.pdf">View Code →</a>
+      <a href="https://github.com/chrcava/chrcava.github.io/blob/2d54a683ef5e24940e89b47bd41088a9ccb66315/RMP_final_chrcava.pdf">Read Paper →</a>
     </div>
     
   </div>
