--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <div class="project-desc">A team project to design and develop a robot that scales buildings and produces a floodlight. My contribution was the mechaical design of the legs.</div>
       <a href="https://github.com/ElliotWeiner/TubeBot" target="_blank">View Project →</a>
     </div>
+    </div>
 
     <div class="gp">
       <div class="project-title">RPI Robotics II</div>
