--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     </div>
 
     <div class="project">
+      <div class="project-title">Work with Soft Robotics</div>
+      <div class="project-desc">Explored different types of fabrication and soft robots. Personally designed a pneu net grasping to an entirely soft pneu net robot.</div>
+      <a href="https://github.com/chrcava/soft_robotics" target="_blank">View Projects →</a>
+    </div>
+
+    <div class="project">
       <div class="project-title">Enhancing Motion Planning Efficiency: A Hybrid Approach Combining A* and RRT Algorithms</div>
       <div class="project-desc">Python and MATLAB visualization of an A* algorithm combining RRT elements.</div>
       <a href="https://github.com/chrcava/chrcava.github.io/blob/2d54a683ef5e24940e89b47bd41088a9ccb66315/RMP_final_chrcava.pdf">Read Paper →</a>
