--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     </div>
 
     <div class="project">
+      <div class="project-title">Nonlinear Modeling of Cycling</div>
+      <div class="project-desc">A nonlinear display of the mathematics of cycling. Investigated Routh-Hurwitz, bifurcations, and implemented a controller that was tested on two simulations.</div>
+      <a href="https://github.com/chrcava/nonlinear_systems_and_controls" target="_blank">View Project →</a>
+    </div>
+
+    <div class="project">
       <div class="project-title">Work with Soft Robotics</div>
       <div class="project-desc">Explored different types of fabrication and soft robots. Personally designed a pneu net grasping to an entirely soft pneu net robot.</div>
       <a href="https://github.com/chrcava/soft_robotics" target="_blank">View Projects →</a>
