--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
   <h3>Robotics & Mechanical Engineer</h3>
 
   <p>
-    I am a Robotics and Mechanical Engineer passionate about developing human-centered robotic systems that integrate mechanical design, control, and soft materials. 
+    I am a Robotics and Mechanical Engineer passionate about developing human-centered robotic systems.
     My experience spans the design and fabrication of soft robotic actuators, wearable systems, and bio-inspired mechanisms. 
     I enjoy translating complex experimental ideas into manufacturable, testable prototypes that advance safe and adaptive human–robot interaction.
   </p>
 
   <p>
-    I earned my M.S. in Robotics and Autonomous Systems from <b>Boston University</b>, where I focused on soft robotics and motion planning. 
-    I hold a B.S. in Mechanical Engineering with a minor in Studio Arts from <b>Rensselaer Polytechnic Institute (RPI)</b>, 
+    I earned my M.S. in Robotics and Autonomous Systems from Boston University.
+    I hold a B.S. in Mechanical Engineering with a minor in Studio Arts from Rensselaer Polytechnic Institute (RPI), 
     where I was also a member of the Varsity Swim Team specializing in sprint events.
   </p>
 
