--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     </div>
 
     <div class="project">
-      <div class="project-title">Soft Robotics Design and Fabrication</div>
+      <div class="project-title">Soft Robotics</div>
       <div class="project-desc">
-        Designed and prototyped multiple Pneu-Net soft actuators, including a three-finger gripper and a four-legged pneumatic robot. 
+        Designed and prototyped multiple soft actuators, including a three-finger Pneu-Net gripper for a four-legged walking pneumatic robot. 
         Focused on actuator geometry, material layering, and fiber reinforcement techniques for controllable deformation.
       </div>
       <a href="https://github.com/chrcava/soft_robotics" target="_blank">View Projects →</a>
@@ -117,7 +117,7 @@
       <div class="project-title">TubeBot: The Floodlight Robot</div>
       <div class="project-desc">
         Team project to design a wall-climbing inspection robot equipped with a deployable floodlight. 
-        Responsible for mechanical design and analysis of the leg system using CAD and finite element methods.
+        Responsible for mechanical design and analysis of the leg system using CAD.
       </div>
       <a href="https://github.com/ElliotWeiner/TubeBot" target="_blank">View Project →</a>
     </div>
@@ -126,7 +126,7 @@
       <div class="project-title">RPI Robotics II: Mobile Robots</div>
       <div class="project-desc">
         Developed and tested mobile robot navigation systems. 
-        Contributed to mapping (SLAM), teleoperation, and integration of sensor data for localization.
+        Contributed to mapping (SLAM) and teleoperation.
       </div>
       <a href="https://github.com/Parky10young/S24_roboticsII_ws" target="_blank">View Projects →</a>
     </div>
