--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <p>
     I earned my M.S. in Robotics and Autonomous Systems from Boston University.
-    I hold a B.S. in Mechanical Engineering with a minor in Studio Arts from Rensselaer Polytechnic Institute (RPI), 
+    I have a B.S. in Mechanical Engineering with a minor in Studio Arts from Rensselaer Polytechnic Institute (RPI), 
     where I was also a member of the Varsity Swim Team specializing in sprint events.
   </p>
 
