--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         Designed and fabricated a bistable fluidic valve and other modular components for an underwater swimming robot. 
         Work included CAD design, mechanical testing, and soft material fabrication.
       </div>
-      <a href="https://github.com/chrcava/chrcava.github.io/blob/7cc1e6e2deaa3af714e2799cf6b3c8f517404bc6/Cavalluzzo%20indep%20study%20final.pdf" target="_blank">Read Paper →</a>
+      <a href="https://github.com/chrcava/BU-Independent-Study" target="_blank">View Project →</a>
     </div>
 
     <div class="project">
